MovieInformation finished milestone 3_3

--- a/app/src/main/res/layout/movie_add_favorite.xml
+++ b/app/src/main/res/layout/movie_add_favorite.xml
@@ -7,8 +7,8 @@
 
     <ImageView
         android:id="@+id/imageView7"
-        android:layout_width="39dp"
-        android:layout_height="36dp"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/movieply_icon" />
@@ -17,9 +17,9 @@
         android:id="@+id/movie_add_favorite"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="4dp"
         android:text="movie name goes here"
+        android:textSize="10sp"
         app:layout_constraintStart_toEndOf="@+id/imageView7"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
