--- a/app/src/main/res/layout/activity_movie_database_api.xml
+++ b/app/src/main/res/layout/activity_movie_database_api.xml
@@ -11,6 +11,7 @@
 
 
 <LinearLayout
+    android:background="#E5DAE6"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -25,19 +26,19 @@
         app:layout_constraintTop_toTopOf="parent"/>
 
 
-    <ImageButton
+   <!-- <ImageButton
         android:id="@+id/welcomImageButton"
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:background="#55AFD8"
-        app:srcCompat="@drawable/play2" />
+        app:srcCompat="@drawable/play2" />-->
 
     <ImageButton
         android:id="@+id/adultVericicationImageButton"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="31dp"
         android:background="#66BDDF"
-        app:srcCompat="@drawable/marketplace_icon" />
+        app:srcCompat="@drawable/play2" />
 
     <TextView
         android:id="@+id/movieTextView"
@@ -75,9 +76,11 @@
         android:hint="Enter membership number here "
         android:inputType="phone" />
 
+    <!--Movie information detail title,year,rating,runtime,main actor,plot,poster-->
+
     <Button
         android:id="@+id/loginBtn"
-        android:layout_width="110dp"
+        android:layout_width="158dp"
         android:layout_height="30dp"
         android:background="@color/black"
         android:rotation="0"
@@ -86,14 +89,6 @@
         android:textAlignment="center"
         android:textColor="#FFF7F7"
         android:textSize="10sp" />
-
-          <!--Movie information detail title,year,rating,runtime,main actor,plot,poster-->
-    <Button
-        android:id="@+id/addMovieButton"
-        android:layout_width="110dp"
-        android:layout_height="36dp"
-        android:text="@string/newMovieBtn"
-        android:textSize="8sp" />
 
     <TextView
         android:id="@+id/title"
@@ -141,7 +136,7 @@
     <ImageView
         android:id="@+id/poster"
         android:layout_width="match_parent"
-        android:layout_height="121dp"
+        android:layout_height="128dp"
         android:visibility="invisible" />
 
 
@@ -150,10 +145,25 @@
 
     <!--favorites button-->
 
+    <Button
+        android:id="@+id/addMovieButton"
+        android:layout_width="158dp"
+        android:layout_height="36dp"
+        android:text="@string/newMovieBtn"
+        android:textSize="8sp" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="*Favorite Movie*"
+        android:textColor="#284888" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/myrecycler"
         android:layout_width="match_parent"
-        android:layout_height="111dp" />
+        android:layout_height="120dp"
+        android:background="#B0B8EA" />
 
 
     <!--detail button-->
