--- a/app/src/main/res/layout/charging_station_popout_header.xml
+++ b/app/src/main/res/layout/charging_station_popout_header.xml
@@ -12,6 +12,7 @@
             android:id="@+id/intro"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="25dp"
             android:text="@string/charging_introduction" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
