--- a/app/src/main/res/layout/empty_oct_layout.xml
+++ b/app/src/main/res/layout/empty_oct_layout.xml
@@ -7,7 +7,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/primary"
+        android:background="#B2EBF2"
         android:id="@+id/oct_fragmentRoom"/>
 
 </LinearLayout>
