--- a/app/src/main/res/layout/oct_station_detail_layout.xml
+++ b/app/src/main/res/layout/oct_station_detail_layout.xml
@@ -20,14 +20,12 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.drawerlayout.widget.DrawerLayout
-        android:id="@+id/drawer_layout"
+        android:id="@+id/station_drawer_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/linearLayout"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/linearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".oct.StationDetail">
@@ -47,23 +45,21 @@
         android:layout_height="0dp"
         android:fontFamily="@font/archivo_black"
         android:text="TextView"
-        android:textColor="#AB47BC"
+        android:textColor="#656565"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/returnButtonStation"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="21dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="32dp"
-        android:text="@string/oct_returnButtonStation"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/stationInformationRecycler" />
+        <Button
+            android:id="@+id/returnButtonStation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="32dp"
+            android:layout_marginBottom="32dp"
+            android:text="@string/oct_returnButtonStation"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/staticInfo"
@@ -71,7 +67,7 @@
         android:layout_height="41dp"
         android:fontFamily="@font/archivo_black"
         android:text="Stop description and error message"
-        android:textColor="#AB47BC"
+        android:textColor="#656565"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.515"
         app:layout_constraintStart_toStartOf="parent"
@@ -81,10 +77,10 @@
         <com.google.android.material.navigation.NavigationView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:id="@+id/popup_menu_oct"
+            android:id="@+id/popup_menu_oct_s"
             android:layout_gravity = "start"
             android:fitsSystemWindows="true"
             app:headerLayout="@layout/popout_header_oct"
-            app:menu="@menu/oct_main_menu"/>
+            app:menu="@menu/oct_station_page_menu"/>
     </androidx.drawerlayout.widget.DrawerLayout>
 </LinearLayout>
