--- a/app/src/main/res/layout/route_detail_layout.xml
+++ b/app/src/main/res/layout/route_detail_layout.xml
@@ -3,28 +3,42 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#F0DFA7">
 
     <TextView
         android:id="@+id/routeHeader"
-        android:layout_width="279dp"
-        android:layout_height="44dp"
+        android:layout_width="296dp"
+        android:layout_height="35dp"
         android:layout_marginTop="16dp"
         android:fontFamily="@font/archivo_black"
         android:text="title goes here"
+        android:textColor="#656565"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/routeDetailInfo"
-        android:layout_width="279dp"
-        android:layout_height="671dp"
+        android:layout_width="297dp"
+        android:layout_height="588dp"
         android:fontFamily="@font/baloo_bhai"
         android:text="route detail goes here"
+        android:textColor="#656565"
         android:textSize="15sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/routeHeader" />
+
+    <Button
+        android:id="@+id/route_close_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="28dp"
+        android:text="@string/route_close_btn"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/routeDetailInfo"
+        app:layout_constraintVertical_bias="1.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
