--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="my_text">#E91E63</color>
+    <color name="oct_text">#E91E63</color>
     <color name="primary">#B2EBF2</color>
 </resources>
