--- a/app/src/main/res/menu/oct_station_page_menu.xml
+++ b/app/src/main/res/menu/oct_station_page_menu.xml
@@ -50,6 +50,12 @@
             android:icon="@android:drawable/ic_menu_info_details"
             android:title="@string/id_help_oct"
             app:showAsAction="always" />
+        <item
+            android:id="@+id/id_main_from_oct"
+            android:icon="@drawable/home_icon"
+            android:orderInCategory="1"
+            android:title="@string/id_favorites_oct"
+            app:showAsAction="always" />
 
 
 </menu>
